# jackal_minefield_template

./: CMakeLists.txt  README.md  package.xml
scripts/: control.py  grid_creator.py  navigation.py  set_mine.py
