<?xml version="1.0"?>
<package>
  <name>jackal_minefield_template</name>
  <version>0.0.0</version>
  <description>The jackal_minefield_template package</description>

  <maintainer email="fazlur.rahman.ae@gmail.com">Muhammad Fazlur Rahman</maintainer>

  <license>BSD</license>
  <author email="fazlur.rahman.ae@gmail.com">Muhammad Fazlur Rahman</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>metal_detector_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>control_msgs</build_depend>
  
  <run_depend>metal_detector_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>husky_navigation</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>control_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
